version/0.31/_sources/api/solver/_autosummary/settings/phase_22.rst.txt
:orphan:

.. _phase_22:

phase
=====

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.phase_22
    :show-inheritance:

.. rubric:: Methods

========================================   =====================================================

Method                                                                                   Summary

========================================   =====================================================
:ref:`create <create_1>`                       Create a new instance of the current object type.

:ref:`delete <delete_1>`                                                Delete selected objects.

:ref:`rename <rename>`                                                        Rename the object.

:ref:`list <list>`                                                List the names of the objects.

:ref:`list_properties <list_properties>`                   List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                                    Create a copy of the object.

========================================   =====================================================

.. rubric:: Named object type

:ref:`phase_22_child <phase_22_child>`


.. rubric:: Included in:

============================================================   ===============================================

Parent                                                                                                 Summary

============================================================   ===============================================
:ref:`recirculation_inlet_child <recirculation_inlet_child>`       'child_object_type' of recirculation_inlet.

============================================================   ===============================================

